@@ -1,5 +1,11 @@
 2022-01-14 Gabriele Gorla <gorlik@yahoo.com>
 
+    * sdcc/src/mos6502/gen.c,
+      sdcc/device/lib/mos6502/crt0.s:
+      Remove use of BASEPTR.
+
+2022-01-14 Gabriele Gorla <gorlik@yahoo.com>
+
     * sdcc/src/mos6502/gen.c:
       Let storeConstToAop use X and Y as well.
 
